# staking-paras-cli

./: Cargo.toml  README.md  \
artifacts/: staing-parachain.scale  staking-parachain.scale
src/: main.rs
